--- a/Systeme/RC1K.tex
+++ b/Systeme/RC1K.tex
@@ -22,7 +22,7 @@ Les enchères de 1\NT, 2\T et 2\K sont des Texas forcing de manche. l'enchère d
 1\P & 0-4H & Toute distribution \\
 \rb & 5-7DH & 4 cartes à \P \\
 & 12H+ & Pas 4 cartes à \P \\
-1SA & 12H+ & 5 cartes à \T \\
+1\NT & 12H+ & 5 cartes à \T \\
 2\T & 12H+ & 5 cartes à \K \\
 2\K & 12H+ & 5 cartes à \C \\
 2\C & 11DH+ & 4 cartes à \P \\
@@ -32,7 +32,7 @@ Les enchères de 1\NT, 2\T et 2\K sont des Texas forcing de manche. l'enchère d
 3\K & 9-11H & 6 cartes à \K \\
 3\C & 9-11H & 6+ cartes à \C \\
 3\P & 7-9H & 5 cartes à \P \\
-3SA & 8-11H & Chicane indéterminée \\
+3\NT & 8-11H & Chicane indéterminée \\
 4\T & 8-11H & Singleton \T\\
 4\K & 8-11H & Singleton \K\\
 4\C & 8-11H & Singleton \C\\
@@ -133,6 +133,22 @@ Dans cette séquence, le répondant n'a pas le droit de dépasser 2\NT pour lais
 3\K &  & Singleton \K \\
 3\C &  & Singleton \C \\
 3\P &  & Singleton \T\\
+}
+
+\titre{1\K--1\P}
+
+\enchbox{1\K--1\P}
+{
+1\NT & 12-19H & Régulier\\
+2\T & 12-21H & Canapé \\
+2\K & 12-21H & Canapé \\
+2\C & 12-21H & Canapé \\
+2\P & 18-21H & 5+ cartes à \P \\
+2\NT & 22-23H & Régulier \\
+3\T & & Canapé forcing de manche \\
+3\K && Canapé forcing de manche \\
+3\C && 5-5 forcing de manche \\
+3\P && Naturel forcing de manche \\
 }
 
 \titre{1\K--1\P--1\NT}
