--- a/Systeme/RC1SA.tex
+++ b/Systeme/RC1SA.tex
@@ -9,7 +9,8 @@ Avec une courte à \T et un jeu faible ou moyen, il est possible d'utiliser 2\T 
 
 Avec un bicolore majeur 5-5, le répondant utilise la séquence 1SA-2\K-2\C-2\P avec un jeu limite de manche. C'est la seule exception à la règle, toute enchère est forcing de manche après un Texas. Avec un jeu de manche, il passe par la réponse directe à 4\K. Et avec un jeu de chelem, il utilise la séquence 1SA-2\C-2\P-3C.
 
-\enchbox{Ouverture de 1\NT}{
+\enchbox{Ouverture de 1\NT}
+{
 2\T &0H+& Puppet Stayman \\
 -> &  2\K & Pas de majeure cinquième\\
 \rw -> & 2\C & 5 cartes à \C \\
@@ -58,20 +59,22 @@ Avec un singleton dans une main 5-4-3-1 (ou plus rarement 5-4-4-0), le répondan
 
 \enchbox{1\NT -- 2\K -- 2\C}{
 2\P && 5-5 limite de manche\\
--> & 2\NT ->& 3\T\ 5 cartes limite  \\
--> & 2\NT ->& 3\K\ 5 cartes limite  \\
--> & 2\NT ->& 3\C\ 5-5 majeur limite  \\
+-> & 2\NT & relai\\
+->->&& 3\T\ 5 cartes limite  \\
+->->&& 3\K\ 5 cartes limite  \\
+->->&& 3\C\ 5-5 majeur limite  \\
 2\NT && J'ai un singleton \\
--> & 3\T\ ->& 3\K singleton \K\\
-\rw-> & 3\T\ ->& 3\C singleton \T\\
--> & 3\T\ ->& 3\P singleton \P\\
+-> & 3\T\ & relai\\
+->->&& 3\K singleton \K\\
+->->&& 3\C singleton \T\\
+->->&& 3\P singleton \P\\
 3\T && 5 cartes\\
 3\K && 5 cartes\\
 3\C && 6 cartes limite de manche\\
 3\NT && Choix de manche\\
 4\C && Fin\\
-
 }
+
 
 \newpage
 
