--- a/Systeme/RC1C.tex
+++ b/Systeme/RC1C.tex
@@ -40,14 +40,14 @@ Les valeurs en point H sont indicative. Il faut plutôt compter en levées de je
 
 \enchbox{1\C--1\P}
 {
-1\NT & 15-19H & Jeu régulier \\
-2\T  & 15-19H & Naturel \\
-2\K  & 15-19H & Naturel \\
-2\C  & 19H+ & Bicolore mineur\\
-2\P  & 19-22H & Unicolore mineur\\
-2\NT & 22-23H & Régulier\\
-3\T &22H+& Naturel forcing de manche\\
-3\K &22H+& Naturel forcing de manche\\
+1\NT & 15-19H & régulier \\
+2\T  & 15-19H & naturel \\
+2\K  & 15-19H & naturel \\
+2\C  & 19H+ & bicolore mineur\\
+2\P  & 19-22H & unicolore mineur\\
+2\NT & 22-23H & régulier\\
+3\T &22H+& naturel forcing de manche\\
+3\K &22H+& naturel forcing de manche\\
 3\NT && Pour les jouer \\
 }
 
@@ -58,16 +58,16 @@ Comme dans toutes les séquences 1x--1\P--1\NT, les enchères au niveau de 2 ind
 
 \enchbox{1\C--1\P--1\NT}
 {
-2\T && CONCLUSION\\
-2\K && CONCLUSION\\
-2\C && CONCLUSION \\
-2\P &9H+& Bicolore mineur\\
-2SA &14H+& Quantitatif \\
-3\T && Singleton \T \\
-3\K && Singleton \K \\
-3\C && Singleton \C \\
-3\P && Singleton \P \\
-3\NT&9-13H& CONCLUSION
+2\T && conclusion\\
+2\K && conclusion\\
+2\C && conclusion \\
+2\P &9H+& bicolore mineur\\
+2\NT &14H+& quantitatif \\
+3\T && singleton \T \\
+3\K && singleton \K \\
+3\C && singleton \C \\
+3\P && singleton \P \\
+3\NT&9-13H& conclusion
 }
 
 \enchbox{1\C--1\P--1\NT -- 2\NT}
@@ -90,10 +90,10 @@ Le répondant montre 5 cartes à \C dans un jeu pas complètement nul. Avec une 
 \enchbox{1\C--2\K}
 {
 2\C & 15-17H & 2 ou 3 cartes à \C\\
-2\P & 18H+   & Non fitté, forcing manche \\
-2\NT & 18-19H & Régulier \\
-3\T  & 15-17H & Naturel \\
-3\K  & 15-17H & Naturel \\
-3\C  & 18H+ & Fit forcing de manche \\
+2\P & 18H+   & non fitté, forcing manche \\
+2\NT & 18-19H & régulier \\
+3\T  & 15-17H & naturel \\
+3\K  & 15-17H & naturel \\
+3\C  & 18H+ & fit forcing de manche \\
 }
 
