--- a/Systeme/RC1C.tex
+++ b/Systeme/RC1C.tex
@@ -81,6 +81,25 @@ Comme dans toutes les séquences 1x--1\P--1\NT, les enchères au niveau de 2 ind
 
 Ainsi, le répondant peut soit conclure, soit rechercher un chelem, éventuellement en mineure.
 
+\titre{1C--1P--2\NT}
+
+Comme sur toute redemande à 2\NT, 3\T est un checkback Stayman, à la recherche d'un fit \C (le fit \P étant exclu par la réponse de 1\P);
+Les autres enchères annoncent un singleton.
+
+Il n'est hélas pas possible d'annoncer un singleton \T sans dépasser 3\NT. Avec un tel singleton, il est toujors possible d'annoncer 4\K en cas d'espoir de chelem. Sinon 3\NT dera l'affaire.
+
+\enchbox{1C--1P--2\NT}
+{
+3\T && checkback Stayman \\
+-> &  3\K & impossible \\
+-> &  3\C & 3 cartes à \C \\
+-> & 3\P & impossible \\
+-> & 3\NT & 2 cartes à \C \\
+}
+
+\textit{Remarque : Les esprits tordus peuvent modifié le check-back pour y inclure la possibilité du singleton \T. L'effort de mémoire à fournir rend la chose scabreuse.}
+
+
 \titre{1\C--2\K}
 
 Le répondant montre 5 cartes à \C dans un jeu pas complètement nul. Avec une main banale et 2 ou 3 cartes à \C, jusqu'à 17H, l'ouvreur se contente de rectifier à 2\C. Tous les sauts sont forcing de manche. Avec un jeu fort sans enchère naturelle, on utilise le Joker à 2\P.
