--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -198,12 +198,19 @@ A partir de 2\T, on oublie les Texas. Le \Double est Spoutnik et promet 4 cartes
 L'enchère de 2\K devient naturelle, forcing un tour, de même que l'enchère de 2\P.
 Et l'enchère de 3\C indique un soutien limite de manche.
 
-\enchbox{1\T(<2\T>|<2\K>)}
+\enchbox{1\T <2\T>}
 {
 \Double &8H+& 4+ cartes à \P \\
 2\P  && naturel forcing \\
 3\H  && limite de manche \\
 }
+
+\enchbox{1\T <2\K>}
+{
+\Double &8H+& 4+ cartes à \P \\
+2\P  && naturel forcing \\
+3\H  && limite de manche \\
+
 
 \section*{barrage}
 
