--- a/Systeme/RC1K.tex
+++ b/Systeme/RC1K.tex
@@ -19,9 +19,9 @@ Les enchères de 1\NT, 2\T et 2\K sont des Texas forcing de manche. l'enchère d
 \enchbox{Ouverture de 1\K}
 {
 1\C & 5-11H & Pas 4 cartes à \P \\
-1\P & 0-4H & Toute distribution \\
-\rb & 5-7DH & 4 cartes à \P \\
-& 12H+ & Pas 4 cartes à \P \\
+1\P & 0-4H & ou \\
+\rb & 5-7DH & 4+ cartes à \P ou \\
+& 12H+ & 0-3 cartes à \P \\
 1\NT & 12H+ & 5 cartes à \T \\
 2\T & 12H+ & 5 cartes à \K \\
 2\K & 12H+ & 5 cartes à \C \\
@@ -32,10 +32,10 @@ Les enchères de 1\NT, 2\T et 2\K sont des Texas forcing de manche. l'enchère d
 3\K & 9-11H & 6 cartes à \K \\
 3\C & 9-11H & 6+ cartes à \C \\
 3\P & 7-9H & 5 cartes à \P \\
-3\NT & 8-11H & Chicane indéterminée \\
-4\T & 8-11H & Singleton \T\\
-4\K & 8-11H & Singleton \K\\
-4\C & 8-11H & Singleton \C\\
+3\NT & 8-11H & chicane indéterminée \\
+4\T & 8-11H & singleton \T \\
+4\K & 8-11H & singleton \K \\
+4\C & 8-11H & singleton \C \\
 4\P & 0-10H& Barrage 6 cartes \\
 4\NT && Blackwood brutal\\
 }
@@ -69,7 +69,7 @@ Avec 5 cartes à \P, l'ouvreur doit annoncer 1\NT dans la zone 15-17H. Avec un j
 2\P & &5+ cartes, forcing de manche \\
 2\NT & 18-19H & Régulier \\
 3\T  && Canapé forcing de manche \\
-3\T  && Canapé forcing de manche \\
+3\K  && Canapé forcing de manche \\
 3\C && 5-5 forcing de manche \\
 
 }
@@ -118,7 +118,7 @@ Dans cette séquence, le répondant n'a pas le droit de dépasser 2\NT pour lais
 3\T & 9-11H & Singleton \T \\
 3\K & 9-11H & Singleton \K \\
 3\C & 9-11H & Singleton \C \\
-3\P & 9-11H & 3 cartes à \P\\
+3\P & 9-11H & 3 cartes à \P \\
 }
 
 \titre{1\K--1\C--2\NT}
@@ -126,13 +126,13 @@ Dans cette séquence, le répondant n'a pas le droit de dépasser 2\NT pour lais
 {
 
 3\T &  & Check-back \\
--> & 3\K & 3 cartes à \C et 5 cartes à \P\\
--> & 3\C & 3 cartes à \C et 5 cartes à \P\\
--> & 3\P & 2 cartes à \C et 5 cartes à \P\\
--> & 3\NT & 2 cartes à \C et 4 cartes à \P\\
+-> & 3\K & 3 cartes à \C et 5 cartes à \P \\
+-> & 3\C & 3 cartes à \C et 5 cartes à \P \\
+-> & 3\P & 2 cartes à \C et 5 cartes à \P \\
+-> & 3\NT & 2 cartes à \C et 4 cartes à \P \\
 3\K &  & Singleton \K \\
 3\C &  & Singleton \C \\
-3\P &  & Singleton \T\\
+3\P &  & Singleton \T \\
 }
 
 \titre{1\K--1\P}
@@ -147,7 +147,7 @@ Dans cette séquence, le répondant n'a pas le droit de dépasser 2\NT pour lais
 2\NT & 22-23H & Régulier \\
 3\T & & Canapé forcing de manche \\
 3\K && Canapé forcing de manche \\
-3\C && 5-5 forcing de manche \\
+3\C && 5-4+ forcing de manche \\
 3\P && Naturel forcing de manche \\
 }
 
@@ -171,11 +171,11 @@ Dans cette séquence, le répondant n'a pas le droit de dépasser 2\NT pour lais
 {
 
 3\T &  & Check-back \\
--> & 3\K & 3 cartes à \C et 5 cartes à \P\\
--> & 3\C & 3 cartes à \C et 5 cartes à \P\\
--> & 3\P & 2 cartes à \C et 5 cartes à \P\\
--> & 3\NT & 2 cartes à \C et 4 cartes à \P\\
+-> & 3\K & 3 cartes à \C et 5 cartes à \P \\
+-> & 3\C & 3 cartes à \C et 5 cartes à \P \\
+-> & 3\P & 2 cartes à \C et 5 cartes à \P \\
+-> & 3\NT & 2 cartes à \C et 4 cartes à \P \\
 3\K &  & Singleton \K \\
 3\C &  & Singleton \C \\
-3\P &  & Singleton \T\\
+3\P &  & Singleton \T \\
 }
