--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -1,5 +1,7 @@
 \chapter{L'ouverture de 1\T}
 
+
+
 \begin{multicols}{2}
 
 
@@ -199,9 +201,10 @@ Et l'enchère de 3\C indique un soutien limite de manche.
 \enchbox{1\T <2\T>}
 {
 \Double &8H+& 4+ cartes à \P \\
+2\K && naturel \\
+2\H && naturel
 2\P  && naturel forcing \\
-3\H  && limite de manche \\
-}
+3\H  && limite de manche \\}
 
 \enchbox{1\T <2\K>}
 {
@@ -212,7 +215,20 @@ Et l'enchère de 3\C indique un soutien limite de manche.
 
 \section*{barrage}
 
-Lorsque les adversaires barrent à 3\T ou 3\K.
+Lorsque les adversaires barrent à 3\T ou 3\K, le contre d'appel aura presque toujours 4 cartes à pique.
+Toutefois, sans 4 cartes à \P et sans arrêt dans la couleur de l'intervention, l'ouvreur fait face à un dilemme.
+Toute l’astuce ici consiste à utiliser 3\C comme enchère poubelle.
+
+En effet, avec 15H et 5 cartes à \C, l'ouvreur n'a que faire de ces simagrées et nommera la manche à 4\C.
+
+\enchbox{1T <3\T> \Double \Pass}
+{
+3\K && naturel \\
+3\C && wait and see \\
+3\S && 4 cartes \\
+3\NT && arrêt \T \\
+}
+
 
 
 \section*{Intervention bicolore}
@@ -557,6 +573,7 @@ Les autres enchères au niveau de 3 montrent un singleton (3\C dans la mejeur de
 
 
 \titre{1\T -- 1\NT}
+
 
 L'enchère de 1SA est forcing de manche avec une vraie couleur \T. Par ailleurs, l'enchère dénie 4 cartes à \C et 4 cartes à \P.
 
