--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -202,7 +202,7 @@ Et l'enchère de 3\C indique un soutien limite de manche.
 {
 \Double &8H+& 4+ cartes à \P \\
 2\K && naturel \\
-2\H && naturel
+2\H && naturel \\
 2\P  && naturel forcing \\
 3\H  && limite de manche \\}
 
