--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -221,7 +221,7 @@ Toute l’astuce ici consiste à utiliser 3\C comme enchère poubelle.
 
 En effet, avec 15H et 5 cartes à \C, l'ouvreur n'a que faire de ces simagrées et nommera la manche à 4\C.
 
-\enchbox{1T <3\T> \Double \Pass}
+\enchbox{1T <3\T> \Double <\Pass>}
 {
 3\K && naturel \\
 3\C && wait and see \\
