--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -211,7 +211,7 @@ Et l'enchère de 3\C indique un soutien limite de manche.
 \Double &8H+& 4+ cartes à \P \\
 2\P  && naturel forcing \\
 3\H  && limite de manche \\
-
+}
 
 \section*{barrage}
 
@@ -221,7 +221,7 @@ Toute l’astuce ici consiste à utiliser 3\C comme enchère poubelle.
 
 En effet, avec 15H et 5 cartes à \C, l'ouvreur n'a que faire de ces simagrées et nommera la manche à 4\C.
 
-\enchbox{1T <3\T> \Double <\Pass>}
+\enchbox{1\T <3\T> \Double <\Pass>}
 {
 3\K && naturel \\
 3\C && wait and see \\
