--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -229,7 +229,12 @@ En effet, avec 15H et 5 cartes à \C, l'ouvreur n'a que faire de ces simagrées 
 3\NT && arrêt \T \\
 }
 
-
+\enchbox{1\T <3\K> \Double <\Pass>}
+{
+3\C && wait and see \\
+3\S && 4 cartes \\
+3\NT && arrêt \T \\
+}
 
 \section*{Intervention bicolore}
 Les enchères naturelles sont non forcing. Les cue-bids sont forcing de manche. le cue-bid économique est fitté et le deuxième cue-bid indique 5+ cartes dans la quatrième couleur.
@@ -352,6 +357,10 @@ Sans enchère naturelle, l'ouvreur peut passer par 2\C. La main est 4-4-4-1 mais
 
 \titre{1\T--1\K--1\NT}
 
+\begin{multicols}{2}
+
+
+
 On se retrouve avec l'équivalent d'une ouverture de 1\NT fort. A ceci près que le problème des fits majeurs est déjà résolu. Il n'y en a pas.
 
 De plus, avec un répondant limité à 11H, on ne voit pas bien ce qu'on irait faire en mineure !
@@ -360,14 +369,40 @@ Le répondant peut passer, proposer la manche en disant 2\NT (ou 2\C avec 3 cart
 
 Avec une belle mineure longue, le répondant l'aurait nommée au tour précédent. Les enchères de 2\T et 2\K sont donc logiquement non forcing. Avec les deux mineures et 9-11H, on peut utiliser l'enchère de 2\P. 
 
-Avec un singleton dans une main de 10--11H, le répondant peut avoir envie d'éviter un mauvais 3\NT. Mise à part l'enchère de 3\C qui est une enchère de politesse, toute enchère au niveau de 3 montrent un singleton.
+Comme toujours, les enchère au niveau de 3 sont des singletons, à l'exception bien sur de l'enchère de politesse à 3\C, l'ouvreur peut en avoir 5. Avec 9H et un singleton, on annonce 3\NT, ça passe ou ça casse. La manche mineure est invraisemblable  à ce stade. On annonce d'abord le singleton au niveau de 3 et la mineure ensuite.
 
 
+\enchbox{1\T--1\K--1\NT}
+{
+2\T && naturel non forcing \\
+2\K && naturel non forcing \\
+2\C & 8H & 3 cartes à \C \\
+2\P & 10-11H & bicolore mineur \\
+2\NT & 8H &  \\
+3\T  & 10-11H & singleton \T \\
+3\K & 10-11H & singleton \K \\
+3\C & 9-11H  & 3 cartes à \C \\
+3\P & 10-11H & singleton \P  \\
+3\NT & 9-11H &
+}
+
+\end{multicols}
 \titre{1\T--1\K--2\NT}
 
-Sur toute redemande de l'ouvreur à 2\NT, 3\T est un check-back Stayman (inutile dans cette séquence particulière mais on ne veut pas créer d'exception).
+Sur toute redemande de l'ouvreur à 2\NT, 3\T est un check-back Stayman (inutile dans cette séquence particulière
 
-Les autres enchères au niveau de 3 montrent un singleton (3\C dans la mejeur de l'ouvreur pour le singleton \T)
+car aucun fit majeur n'est possible mais on ne veut pas créer d'exception).
+
+Les autres enchères au niveau de 3 montrent un singleton (3\C dans la majeur de l'ouvreur pour le singleton \T)
+
+\enchbox{1\T--1\K--2\NT}
+{
+3\T && checkback inutile \\
+-> & 3\NT & rectification obligatoire \\
+3\K & singleton \K \\
+3\C & singleton \T \\
+3\P & singleton \P \\
+}
 
 
 \titre{
@@ -464,10 +499,10 @@ Le redemande artificiel à 2\P est moins utile qu'après une réponse à 1\P (4\
 2\T &5-7H& 5 cartes faible\\
 2\K &5-7H& 5 cartes faible\\
 2\C& 5H+& 5 cartes à \P \\
-2\P& 16H+ & Artificiel \\
-2\NT & 8H & Naturel \\
-3\T & 9H+ & Singleton \T \\
-3\K & 9H+ & Singleton \K \\
+2\P& 16H+ & artificiel \\
+2\NT & 8H & naturel \\
+3\T & 9H+ & singleton \T \\
+3\K & 9H+ & singleton \K \\
 3\C & 9H+ & 3 cartes à \C \\
 3\P & 16H+ & 6 cartes à \P \\
 3\NT && Conclusion\\
@@ -482,9 +517,17 @@ Le redemande artificiel à 2\P est moins utile qu'après une réponse à 1\P (4\
 
 Sur toute redemande de l'ouvreur à 2\NT, 3\T est un check-back Stayman à la recherche d'un soutien de 3 cartes à \P. L'enchère de 3\P montre 6 cartes et des ambitions.
 
-Les autres enchères au niveau de 3 montrent un singleton (3\C dans la mejeur de l'ouvreur pour le singleton \T)
+Les autres enchères au niveau de 3 montrent un singleton (3\C dans la majeure de l'ouvreur pour le singleton \T)
 
-
+\enchbox{1\T--1\C--2\NT}
+{
+3\T && checkback Stayman\\
+-> & 3\P & 3 cartes à \P \\
+-> & 3\NT & 2 cartes à \P \\
+3\K & singleton \K \\
+3\C & singleton \T \\
+3\P & chelem  \P \\
+}
 
 
 
