--- a/Systeme/RC1T.tex
+++ b/Systeme/RC1T.tex
@@ -399,9 +399,9 @@ Les autres enchères au niveau de 3 montrent un singleton (3\C dans la majeur de
 {
 3\T && checkback inutile \\
 -> & 3\NT & rectification obligatoire \\
-3\K & singleton \K \\
-3\C & singleton \T \\
-3\P & singleton \P \\
+3\K && singleton \K \\
+3\C && singleton \T \\
+3\P && singleton \P \\
 }
 
 
@@ -524,9 +524,9 @@ Les autres enchères au niveau de 3 montrent un singleton (3\C dans la majeure d
 3\T && checkback Stayman\\
 -> & 3\P & 3 cartes à \P \\
 -> & 3\NT & 2 cartes à \P \\
-3\K & singleton \K \\
-3\C & singleton \T \\
-3\P & chelem  \P \\
+3\K && singleton \K \\
+3\C && singleton \T \\
+3\P && chelem  \P \\
 }
 
 
@@ -551,8 +551,8 @@ Les sauts sont forcing de manche à la recherche du meilleur contrat, jouable en
  2\K & 12-21H & Canapé\\
  2\C & 15-21H & 5 cartes à \C, irrégulier \\
  2\P & 22-23H & Tout type de main\\
- -> 2\NT relai obligatoire
- ->-> & 3\T & Naturel non forcing \\
+ -> & 2\NT &relai obligatoire \\
+ \rb ->-> & 3\T & Naturel non forcing \\
  ->-> & 3\K & Naturel non forcing \\
  \rb-> & 3\C & Naturel non forcing \\
  2\NT & 22-23H & Régulier\\
