--- a/Systeme/RC2C.tex
+++ b/Systeme/RC2C.tex
@@ -15,16 +15,16 @@ Un relai forcing de manche à 2\P existe dont l'utilité principale est de retro
 
 \enchbox{Ouverture de 2\C}
 {
-2\P &12H+& Interrogative à \P \\
-2\NT & 11HL & Naturel \\
+2\P &12H+& interrogative à \P \\
+2\NT & 11HL & naturel \\
 3\T  & 9-11H & 6 belles cartes \\
 3\K & 9-11H & 6 belles cartes \\
 3\C & 11DH & propositionnel \\
 3\P & 9-11H & 6 belles cartes \\
-3SA && Conclusion \\
-4\C && Conclusion \\
-4\P && Conclusion \\
-4\NT && Blackwood brutal \\
+3SA && conclusion \\
+4\C && conclusion \\
+4\P && conclusion \\
+4\NT && blackwood brutal \\
 }
 
 \end{multicols}
@@ -70,6 +70,16 @@ Comme la situation est forcing de manche, les enchères de 3\C et de 3\P fixent 
 Les enchères de 3\T et de 3\K sont les plus difficiles. Elles sont naturelles bien sur mais peuvent provenir de mains très différentes.
 Le répondant peut craindre une entame dans l'autre mineure où l'ouvreur pourrait avoir un singleton. Il peut lui-même avoir un singleton pique et souhaite vérifier que les 3 cartes en face sont solides. Plus rarement, il peut avoir envie de jouer un chelem dans sa mineure.
 Quoi qu'il en soit, l'ouvreur nomme 3\NT s'il garde correctement les deux couleurs restantes. Avec une seule couleur gardée, il la nomme (sur 3\K, il dit 3\C quand il garde les \T à cause du classique problème des carreaux). S'il est faible dans les deux couleurs restantes, le contrat de 3\NT est exclu, l'ouvreur se contentera de soutenir la mineure.
+
+Attention. Aucune main n'a annoncé un jeu régulier. Les enchères au niveau de 3 sont donc naturelles. On annonce les singletons uniquement en face d'un jeu régulier.
+
+\enchbox{2\c--2\P--2\NT}
+{
+3\T && naturel \\
+3\K && naturel \\
+3\C && chelem \C \\
+3\P && chelem \P \\
+}
 
 
 \end{multicols}
