--- a/Systeme/Maquette.tex
+++ b/Systeme/Maquette.tex
@@ -93,6 +93,9 @@ fonttitle=\bfseries,nobeforeafter,center title}
 \replacechars{#1}{>}{)}{<}{(}%
 }
 
+\newcommand{\VoirChat}[1]
+{}
+
 \begin{document}
 
 
@@ -109,7 +112,6 @@ fonttitle=\bfseries,nobeforeafter,center title}
 
 
 \section*{TODOLIST}
-\enchbox{1\C\ 1\P\ 2\C\ 2\P \\ 3\C ?}{ZOUKAIDOVLADIVLADA}
 
 Ce document est une version de travail.
 Un certain nombre de séquences risquent d'être modifiées.
@@ -118,13 +120,15 @@ Un certain nombre de séquences risquent d'être modifiées.
 
 [X] Test sur BBO d'au moins 100 donnes
 
+[X] Compatibilité BBOAlert
+
 [ ] Test d'au moins 1000 donnes
 
 [ ] Simplification des complexités inutiles
 
 [ ] Confection d'une couverture attractive
 
-
+Version 0.15
 
 \include{RCIntro.tex}
 \include{RCExemple.tex}
@@ -137,7 +141,7 @@ Un certain nombre de séquences risquent d'être modifiées.
 \include{RC2m.tex}
 \include {RC2C.tex}
 
-\chapter{Ouvertures de 2SA et au delà}
+\chapter{Ouvertures de 2\NT et au delà}
 
 \section*{Ouverture de 2\NT}
 
@@ -154,11 +158,4 @@ Les barrages en Texas ou en double Texas sont des aberrations qui ne font qu'aid
 Mais si ça vous amuse, c'est marrant à jouer. Et c'est le plus important.
 
 \end{document}
-
-
-
-
-
-
-
 
