--- a/Systeme/RC1C.tex
+++ b/Systeme/RC1C.tex
@@ -19,8 +19,8 @@ Avec 5 cartes à \P et un jeu faible, il répond 2\T non forcing. A partir de 6H
 2\K & 6H+ & 5 cartes à \C \\
 2\C & 6H+& 5 cartes à \P \\
 2\P & 3-8H & 6 belles cartes à \P \\
-2\NT & 9H+ & 6 très belles cartes à \T \\
-3\T & 9H+ & 6 très belles cartes à \K \\
+2\NT & 9H+ & 6 belles cartes à \T \\
+3\T & 9H+ & 6 belles cartes à \K \\
 }
 
 
@@ -48,7 +48,7 @@ Les valeurs en point H sont indicative. Il faut plutôt compter en levées de je
 2\NT & 22-23H & régulier\\
 3\T &22H+& naturel forcing de manche\\
 3\K &22H+& naturel forcing de manche\\
-3\NT && Pour les jouer \\
+3\NT && pour les jouer \\
 }
 
 
@@ -63,6 +63,11 @@ Comme dans toutes les séquences 1x--1\P--1\NT, les enchères au niveau de 2 ind
 2\C && conclusion \\
 2\P &9H+& bicolore mineur\\
 2\NT &14H+& quantitatif \\
+-> & 3\T & 15H \\
+\rb -> & 3\K & 16H \\
+-> & 3\C & 17H \\
+\rb -> & 3\P & 18H \\
+-> & 3\NT & 19H \\
 3\T && singleton \T \\
 3\K && singleton \K \\
 3\C && singleton \C \\
@@ -70,16 +75,6 @@ Comme dans toutes les séquences 1x--1\P--1\NT, les enchères au niveau de 2 ind
 3\NT&9-13H& conclusion
 }
 
-\enchbox{1\C--1\P--1\NT -- 2\NT}
-{
-3\T &15H& \\
-3\K &16H& \\
-2\C &17H& \\
-3\P &18H& \\
-3\NT &19H& \\
-}
-
-Ainsi, le répondant peut soit conclure, soit rechercher un chelem, éventuellement en mineure.
 
 \titre{1\C--1\P--2\NT}
 
