--- a/Systeme/Maquette.tex
+++ b/Systeme/Maquette.tex
@@ -53,7 +53,7 @@
 \tcbox[left=0mm,right=0mm,top=0mm,bottom=0mm,boxsep=0mm,
 toptitle=0.5mm,bottomtitle=0.5mm,title=\parenthese{#1}]{%fond vert
 \arrayrulecolor{blue!5!black}\renewcommand{\arraystretch}{1.2}%
-\begin{tabular}{ccc}
+\begin{tabular}{ccl}
  #2
 \end{tabular}
 }
@@ -128,7 +128,7 @@ Un certain nombre de séquences risquent d'être modifiées.
 
 [ ] Confection d'une couverture attractive
 
-Version 0.15
+Version 0.16
 
 \include{RCIntro.tex}
 \include{RCExemple.tex}
@@ -158,4 +158,11 @@ Les barrages en Texas ou en double Texas sont des aberrations qui ne font qu'aid
 Mais si ça vous amuse, c'est marrant à jouer. Et c'est le plus important.
 
 \end{document}
+
+
+
+
+
+
+
 
